force-app/main/default/objects/eagleview__Order__c/eagleview__Order__c.object-meta.xml
<CustomObject>
    <label>EagleView Order</label>
    <nameField>
        <displayFormat>EVO-{00000}</displayFormat>
        <label>EagleView Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EagleView Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>