force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Area__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Area__c</fullName>
    <inlineHelpText>Total area, according to the report (sq).</inlineHelpText>
    <label>Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>