force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Cost__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Cost__c</fullName>
    <inlineHelpText>Total cost of the report.</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>