force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Eaves__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Eaves__c</fullName>
    <inlineHelpText>Total length of all eaves, according to the report (ft).</inlineHelpText>
    <label>Eaves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>