force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Hips__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Hips__c</fullName>
    <inlineHelpText>Total length of all hips, according to the report (ft).</inlineHelpText>
    <label>Hips</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>