force-app/main/default/objects/eagleview__Order__c/fields/eagleview__InitialOrder__c.field-meta.xml
<CustomField>
    <fullName>eagleview__InitialOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The field is automatically set if the current order is the result of another order upgrade.</inlineHelpText>
    <label>Initial EagleView Order</label>
    <referenceTo>eagleview__Order__c</referenceTo>
    <relationshipLabel>Upgraded EagleView Order</relationshipLabel>
    <relationshipName>EagleView_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>