force-app/main/default/objects/eagleview__Order__c/fields/eagleview__IsChangesInLastFourYears__c.field-meta.xml
<CustomField>
    <fullName>eagleview__IsChangesInLastFourYears__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if there have been changes at this address in the past 4 years.</inlineHelpText>
    <label>Changes In Last 4 Years</label>
    <type>Checkbox</type>
</CustomField>