force-app/main/default/objects/eagleview__Order__c/fields/eagleview__OrderedDate__c.field-meta.xml
<CustomField>
    <fullName>eagleview__OrderedDate__c</fullName>
    <label>Ordered Date</label>
    <type>DateTime</type>
</CustomField>