force-app/main/default/objects/eagleview__Order__c/fields/eagleview__OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>eagleview__OwnerEmail__c</fullName>
    <formula>IF( 
  ISBLANK(Owner:User.Id),
  Owner:Queue.Email,
  Owner:User.Email
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner&apos;s Email Address</label>
    <type>Text</type>
</CustomField>