force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Pitch__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Pitch__c</fullName>
    <inlineHelpText>Primary pitch, according to the report.</inlineHelpText>
    <label>Pitch</label>
    <length>133</length>
    <type>Text</type>
</CustomField>