force-app/main/default/objects/eagleview__Order__c/fields/eagleview__PromoCode__c.field-meta.xml
<CustomField>
    <fullName>eagleview__PromoCode__c</fullName>
    <label>Promo Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>