force-app/main/default/objects/eagleview__Order__c/fields/eagleview__PropertyCity__c.field-meta.xml
<CustomField>
    <fullName>eagleview__PropertyCity__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>