force-app/main/default/objects/eagleview__Order__c/fields/eagleview__PropertyCountry__c.field-meta.xml
<CustomField>
    <fullName>eagleview__PropertyCountry__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>