force-app/main/default/objects/eagleview__Order__c/fields/eagleview__PropertyCountryCode__c.field-meta.xml
<CustomField>
    <fullName>eagleview__PropertyCountryCode__c</fullName>
    <formula>CASE(
    TEXT(eagleview__PropertyCountry__c),
    &quot;United States&quot;, &quot;US&quot;,
    &quot;Canada&quot;, &quot;CA&quot;,
    &quot;&quot;
)</formula>
    <label>Country Code</label>
    <type>Text</type>
</CustomField>