force-app/main/default/objects/eagleview__Order__c/fields/eagleview__PropertyPostalCode__c.field-meta.xml
<CustomField>
    <fullName>eagleview__PropertyPostalCode__c</fullName>
    <label>ZIP/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>