force-app/main/default/objects/eagleview__Order__c/fields/eagleview__PropertyStreet__c.field-meta.xml
<CustomField>
    <fullName>eagleview__PropertyStreet__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>