force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Rakes__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Rakes__c</fullName>
    <inlineHelpText>Total length of all rakes, according to the report (ft).</inlineHelpText>
    <label>Rakes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>