force-app/main/default/objects/eagleview__Order__c/fields/eagleview__ReportClosed__c.field-meta.xml
<CustomField>
    <fullName>eagleview__ReportClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Closed</label>
    <type>Checkbox</type>
</CustomField>