force-app/main/default/objects/eagleview__Order__c/fields/eagleview__ReportId__c.field-meta.xml
<CustomField>
    <fullName>eagleview__ReportId__c</fullName>
    <inlineHelpText>Unique report identifier generated by EagleView after the order is placed</inlineHelpText>
    <label>Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>