force-app/main/default/objects/eagleview__Order__c/fields/eagleview__ReportReceived__c.field-meta.xml
<CustomField>
    <fullName>eagleview__ReportReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Received</label>
    <type>Checkbox</type>
</CustomField>