force-app/main/default/objects/eagleview__Order__c/fields/eagleview__ReportType__c.field-meta.xml
<CustomField>
    <fullName>eagleview__ReportType__c</fullName>
    <label>Report Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>