force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Ridges__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Ridges__c</fullName>
    <inlineHelpText>Total length of all ridges , according to the report (ft).</inlineHelpText>
    <label>Ridges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>