force-app/main/default/objects/eagleview__Order__c/fields/eagleview__StatusDescription__c.field-meta.xml
<CustomField>
    <fullName>eagleview__StatusDescription__c</fullName>
    <inlineHelpText>Last Received Status Description</inlineHelpText>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>