force-app/main/default/objects/eagleview__Order__c/fields/eagleview__StatusId__c.field-meta.xml
<CustomField>
    <fullName>eagleview__StatusId__c</fullName>
    <inlineHelpText>Last Received Status Id</inlineHelpText>
    <label>Status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>