force-app/main/default/objects/eagleview__Order__c/fields/eagleview__SubStatusDescription__c.field-meta.xml
<CustomField>
    <fullName>eagleview__SubStatusDescription__c</fullName>
    <inlineHelpText>Last Received Sub-status Description</inlineHelpText>
    <label>Sub-status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>