force-app/main/default/objects/eagleview__Order__c/fields/eagleview__SubStatusId__c.field-meta.xml
<CustomField>
    <fullName>eagleview__SubStatusId__c</fullName>
    <inlineHelpText>Last Received Sub-status Id</inlineHelpText>
    <label>Sub-status Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>