force-app/main/default/objects/eagleview__Order__c/fields/eagleview__Valleys__c.field-meta.xml
<CustomField>
    <fullName>eagleview__Valleys__c</fullName>
    <inlineHelpText>Total length of all valleys, according to the report (ft).</inlineHelpText>
    <label>Valleys</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>