force-app/main/default/objects/eagleview__Order__c/listViews/eagleview__All.listView-meta.xml
<ListView>
    <fullName>eagleview__All</fullName>
    <columns>NAME</columns>
    <columns>eagleview__ReportId__c</columns>
    <columns>eagleview__PropertyStreet__c</columns>
    <columns>eagleview__PropertyCity__c</columns>
    <columns>eagleview__PropertyStateCode__c</columns>
    <columns>eagleview__PropertyPostalCode__c</columns>
    <columns>eagleview__ReportType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>