force-app/main/default/objects/eagleview__Order__c/listViews/eagleview__NotYetPlaced.listView-meta.xml
<ListView>
    <fullName>eagleview__NotYetPlaced</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eagleview__ReportId__c</field>
        <operation>equals</operation>
    </filters>
    <label>Not Yet Placed</label>
</ListView>