force-app/main/default/objects/eagleview__Order__c/listViews/eagleview__StandardPlaced.listView-meta.xml
<ListView>
    <fullName>eagleview__StandardPlaced</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>eagleview__ReportId__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>eagleview__ReportReceived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>eagleview__InitialOrder__c</field>
        <operation>equals</operation>
    </filters>
    <label>Standard Placed</label>
</ListView>